--- a/lib/Views/global.scss
+++ b/lib/Views/global.scss
@@ -151,7 +151,7 @@ body {
         color:$color-secondary;
     }
      // center img 
-    .branding {
+    .tjs-branding__branding {
         img {    
             display: block;
             margin: auto;
