change to default font

--- a/lib/Views/global.scss
+++ b/lib/Views/global.scss
@@ -19,9 +19,9 @@ body {
     // Import any custom fonts here
     //@import url(https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,700);
 
-    //html {
-    //    font-family: $font-base;
-    //}
+    html {
+        font-family: $font-base;
+    }
 
     // Logo area in top left
     .tjs-branding__branding {
